--- a/DlWrappers/Project.toml
+++ b/DlWrappers/Project.toml
@@ -1,3 +1,4 @@
 [deps]
+DlWrappers = "32326c28-9ac7-4954-b80e-c95a277351a4"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
