--- a/static/conv_classifier.toml
+++ b/static/conv_classifier.toml
@@ -1,6 +1,13 @@
+[training]
+    num_epochs = 100
+    optimizier = "adam"
+    optimizer_params = {lr = 0.01}
+    batch_size = 32
+
 [architecture]
     name = "conv_classifier_test"
     input_size = [10, 10, 3]
+    num_classes = 10
 
 layers = [
     {f = "conv", out=10, filter=[5,5], sigma="relu"},
