--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Beaver Research", "Mattia G. Bergomi", "Pietro Vertechi"]
 version = "0.1.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
