--- a/static/conv.toml
+++ b/static/conv.toml
@@ -1,8 +1,19 @@
+[training]
+    num_epochs = 100
+    optimizer = "ADAM"
+    optimizer_params = {lr = 0.01}
+    loss = "logitcrossentropy"
+    loss_params = {dims = 1, agg = "mean"}
+    is_supervised = true
+    batch_size = 32
+
 [architecture]
-    name = "conv_test"
-    input_size = [10, 10, 3]
+    name = "conv_classifier_test"
+    input_size = [28, 28, 1]
+    num_classes = 10
 
 layers = [
     {f = "conv", out=10, filter=[5,5], sigma="relu"},
-    {f = "conv", out=3, filter=[5,5], sigma="relu"}
+    {f = "conv", out=3, filter=[5,5], sigma="relu"},
+    {f = "dense", out=10, sigma="relu"}
 ]
