--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,17 @@ Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
+BSON =  "0.3"
+CUDA = "3.12"
+Flux = "0.13"
+ImageCore = "0.9"
+Images = "0.25"
+IterTools = "1.4"
+JuliaFormatter = "1.0"
+MLDatasets = "0.7"
+MLUtils = "0.4"
+Plots = "1.38"
+Primes = "0.5"
 julia = "1.7"
 
 [extras]
