--- a/Project.toml
+++ b/Project.toml
@@ -13,14 +13,16 @@ IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
 MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
+ParametricMachinesDemos = "bf2452f4-e92a-4e69-8f07-19c02af9b8cb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 BSON = "0.3"
 CUDA = "3.12"
-Flux = "0.13"
+Flux = "0.12, 0.13"
 ImageCore = "0.9"
 Images = "0.25"
 IterTools = "1.4"
