--- a/app/Project.toml
+++ b/app/Project.toml
@@ -1,3 +1,7 @@
 [deps]
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 ParametricMachinesDemos = "bf2452f4-e92a-4e69-8f07-19c02af9b8cb"
 Streamliner = "32326c28-9ac7-4954-b80e-c95a277351a4"
