Train with Optimization.jl (#3)
* wip

* readme

* wip

* fixes

---------

Co-authored-by: Mattia Bergomi <mattiagbergomi@gmail.com>

--- a/static/classifier.toml
+++ b/static/classifier.toml
@@ -11,7 +11,7 @@ supervised = true
 
 [training.optimizer]
 name = "ADAM"
-params = { lr = 0.01 }
+params = {}
 
 [training.loss]
 name = "logitcrossentropy"
