CompatHelper: bump compat for Images to 0.26, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ BSON = "0.3"
 CUDA = "4"
 Flux = "0.13"
 ImageCore = "0.9"
-Images = "0.25"
+Images = "0.25, 0.26"
 IterTools = "1"
 JuliaFormatter = "1"
 MLDatasets = "0.7"
