CompatHelper: bump compat for Flux to 0.14, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 [compat]
 BSON = "0.3"
 CUDA = "4"
-Flux = "0.13"
+Flux = "0.13, 0.14"
 ImageCore = "0.9"
 Images = "0.25"
 IterTools = "1"
