CompatHelper: bump compat for Optimisers to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ JuliaFormatter = "1"
 MLDatasets = "0.7"
 MLUtils = "0.4"
 Optim = "1.7"
-Optimisers = "0.2"
+Optimisers = "0.2, 0.3"
 Optimization = "3"
 OptimizationOptimJL = "0.1"
 OptimizationOptimisers = "0.1"
