--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ OptimizationOptimJL = "0.1"
 OptimizationOptimisers = "0.1"
 Plots = "1"
 Primes = "0.5"
+Statistics = "1"
 TOML = "1"
 julia = "1.8"
 
