--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 BSON = "0.3"
-CUDA = "4"
+CUDA = "4, 5"
 Flux = "0.13, 0.14"
 ImageCore = "0.9, 0.10"
 Images = "0.25, 0.26"
