--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ Optim = "1.7"
 Optimisers = "0.2, 0.3"
 Optimization = "3"
 OptimizationOptimJL = "0.1"
-OptimizationOptimisers = "0.1"
+OptimizationOptimisers = "0.1, 0.2"
 Plots = "1"
 Primes = "0.5"
 Statistics = "1"
