--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ MLUtils = "0.4"
 Optim = "1.7"
 Optimisers = "0.2, 0.3"
 Optimization = "3"
-OptimizationOptimJL = "0.1"
+OptimizationOptimJL = "0.1, 0.2"
 OptimizationOptimisers = "0.1, 0.2"
 Plots = "1"
 Primes = "0.5"
